<resources>
    <string name="app_name" translatable="false">SoilOCulture</string>
    <string name="activity1">Crop Recommendation</string>
    <string name="activity2">Plant Disease Detection</string>
    <string name="activity3">Change Language</string>
    <string name="activity5">Click Here \n For More Information </string>
    <string name="app_moto">Agriculture is our wisest pursuit, because it will in the end contribute most to real wealth, good morals &amp; happiness."The farmer has to be an optimist or he wouldn't still be a farmer"</string>
    <string name="output">Output</string>
    <string name="pickimage">PickImage</string>
    <string name="start_camera">Start Camera</string>
    <string name="nitrogen">Nitrogen</string>
    <string name="potassium">Potassium</string>
    <string name="phos">Phosphorus</string>
    <string name="ph">pH</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="enter">Enter</string>
    <string name="number_of_days">Number of Days</string>
    <string name="weather">Weather</string>
    <string name="rain_forecast">Rain Forecast</string>
    <string name="loading">Loading ...</string>
</resources>