<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:background="@drawable/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".recommend.RecommendActivity">


    <EditText
        android:id="@+id/nitro"
        android:layout_width="293dp"
        android:layout_height="54dp"
        android:background="@drawable/rounded"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:inputType="number"
        android:hint="@string/nitrogen"
        android:textColorHint="@color/theme"
        app:layout_constraintBottom_toTopOf="@+id/potas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></EditText>

    <EditText
        android:id="@+id/potas"
        android:background="@drawable/rounded"
        android:textAlignment="center"
        android:layout_width="293dp"
        android:textColorHint="@color/theme"

        android:layout_height="54dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/potassium"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/phos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nitro"></EditText>

    <EditText
        android:id="@+id/phos"
        android:layout_width="293dp"
        android:layout_height="54dp"
        android:textAlignment="center"
        android:textColorHint="@color/theme"

        android:layout_marginBottom="21dp"
        android:hint="@string/phos"
        android:inputType="numberDecimal"
        android:background="@drawable/rounded"
        app:layout_constraintBottom_toTopOf="@+id/pH"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/potas"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/pH"
        android:layout_width="293dp"
        android:layout_height="54dp"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:textColorHint="@color/theme"

        android:hint="@string/ph"
        android:inputType="number"

        android:background="@drawable/rounded"
        app:layout_constraintBottom_toTopOf="@+id/state"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phos"></EditText>

    <EditText
        android:id="@+id/state"
        android:layout_width="293dp"
        android:layout_height="54dp"
        android:textColorHint="@color/theme"

        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded"
        android:hint="@string/state"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pH"></EditText>

    <EditText
        android:id="@+id/city"
        android:layout_width="293dp"
        android:layout_height="54dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded"
        android:hint="@string/city"
        android:inputType="text"
        android:textAlignment="center"
        android:textColorHint="@color/theme"

        app:layout_constraintBottom_toTopOf="@+id/predict"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/state"
        tools:ignore="Hardcoded Text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/predict"
        android:layout_width="139dp"
        android:layout_height="45dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/rounded_button"
        android:text="@string/enter"
        app:backgroundTint="@color/main1"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city"
        app:rippleColor="@color/white"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="130dp"
        android:text=""
        android:textColor="@color/theme"

        android:textAlignment="center"
        android:textSize="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/predict"
        tools:ignore="HardcodedText" />


</androidx.constraintlayout.widget.ConstraintLayout>