<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/changelang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="164dp"
        android:backgroundTint="#FFFF"
        android:fontFamily="@font/poppins"
        android:text="@string/activity3"
        android:textColor="@color/main1"
        app:cornerRadius="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView1"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="93dp"
        android:layout_marginBottom="322dp"
        android:elevation="15dp"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="328dp"
        android:layout_height="375dp"
        android:layout_gravity="center"
        android:layout_marginBottom="260dp"
        app:cardBackgroundColor="@color/main3"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Button
                android:id="@+id/button3"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="192dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="#FFFF"
                android:fontFamily="@font/poppins"
                android:onClick="onGotoCropRecommendation"
                android:text="@string/activity1"
                android:textColor="@color/main1"
                android:textSize="15sp"
                app:cornerRadius="17dp"
                app:layout_constraintBottom_toTopOf="@+id/button4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.551"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </Button>

<!--            <Button-->
<!--                android:id="@+id/button4"-->
<!--                android:layout_width="275dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginBottom="8dp"-->
<!--                android:backgroundTint="#FFFF"-->
<!--                android:fontFamily="@font/poppins"-->
<!--                android:onClick="onGotoWeatherActivity"-->
<!--                android:text="@string/rain_forecast"-->
<!--                android:textColor="@color/main1"-->
<!--                android:textSize="15sp"-->
<!--                app:cornerRadius="17dp"-->
<!--                app:layout_constraintBottom_toTopOf="@+id/button2"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintHorizontal_bias="0.511"-->
<!--                app:layout_constraintStart_toStartOf="parent">-->

<!--            </Button>-->

            <Button
                android:id="@+id/button2"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFF"
                android:fontFamily="@font/poppins"
                android:onClick="onGotoPlantDisease"
                android:text="@string/activity2"
                android:textColor="@color/main1"
                android:textSize="15sp"
                app:cornerRadius="17dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.509"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button3"
                app:layout_constraintVertical_bias="0.436">

            </Button>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>